@@ -2,6 +2,7 @@
 
 	* magick/montage.c (MontageImages): Silence Coverity 10255 "Unused
 	value".
+	(MontageImages): Silence Coverity 10264 "Unused value".
 
 2015-04-09  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
